# document-chunker

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
document_chunker/: config.py  main.py  schemas.py
document_chunker/processing/: chunk.py  excel.py  extract.py  pdf.py  utils.py  word.py
