[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "document-chunker"
version = "0.2.0"
description = "FastAPI service: parse documents and plain text, return lemmatized chunks"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pymupdf>=1.24.0",
    "docx2python>=2.0",
    "openpyxl>=3.1",
    "aiohttp>=3.9",
    "pymorphy3>=2.0",
    "stop-words>=2018.7.23",
    "razdel>=0.5",
    "tiktoken>=0.7",
    "more-itertools>=10.0",
    "psutil>=5.9",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[tool.setuptools.packages.find]
where = ["."]  # finds document_chunker/ package
